--- a/src/components/BudgetInput/BudgetInput.css
+++ b/src/components/BudgetInput/BudgetInput.css
@@ -44,3 +44,15 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 12px;
   color: #fff;
 }
+
+@media screen and (max-width: 600px) {
+  #budgetInputForm {
+    font-size: 42px;
+  }
+  #input-icon {
+    font-size: 42px;
+  }
+  #inputsubtext {
+    font-size: 10px;
+  }
+}
