--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -5,7 +5,7 @@
   line-height: normal;
   font-size: 26px;
   color: #4f4f4f;
-  margin-top: 10px;
+  margin-top: 8px;
   margin-bottom: -5px;
 }
 .itemPercentage {
@@ -42,6 +42,8 @@
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
   margin-top: 10px;
   padding: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
   position: relative;
   font-family: "Prompt", sans-serif;
 }
@@ -78,4 +80,22 @@
   color: #ffffff;
   transition-duration: 0.4s;
   transition-delay: 0.7s;
+}
+
+@media screen and (max-width: 600px) {
+  .itemTitle {
+    font-size: 18px;
+    margin-top: 10px;
+  }
+  .itemPercentage {
+    font-size: 12px;
+  }
+  .itemTotal {
+    font-size: 18px;
+  }
+  .item-card {
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
